configuring automatic commit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,9 +176,9 @@ jobs:
           command: |
             git config user.email "shrikant1997upadhyay@gmail.com"
             git config user.name "CircleCI Job"
-            git checkout main
+            sed -i 's/v0.0.0/v1.0.0/g' install.sh
             git commit --allow-empty -am "Automatic commit from CircleCI [skip ci]"
-            git push origin main
+            git push
 
 workflows:
   # tests:
