--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,9 +159,30 @@ jobs:
           command: | 
             go get -u github.com/tcnksm/ghr
             VERSION=$(git describe --tags --abbrev=0)
+            echo "export VERSION=$VERSION" >> test.txt
             mv razor_go.linux-amd64.tar.gz razor_go.${VERSION}.linux-amd64.tar.gz && mv razor_go.linux-arm64.tar.gz razor_go.${VERSION}.linux-arm64.tar.gz
             echo "Pushing artifacts echo  razor_go.${VERSION}.linux-amd64.tar.gz and razor_go.${VERSION}.linux-arm64.tar.gz"
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${VERSION} razor_go.${VERSION}.linux-amd64.tar.gz
+      - persist_to_workspace:
+          root: .
+          paths:
+            - version.txt
+  
+  gcp_update_stable:
+    docker:
+      - image: gcr.io/google.com/cloudsdktool/google-cloud-cli:385.0.0-slim
+    steps:
+      - attach_workspace:
+          at: test.txt
+      - run:
+          name: "Updating GCP txt file"
+          command: |
+            echo "${GCP_BUCKET_SERVICE_ACCOUNT_KEY}" > gcp_service_accout.json
+            cat  gcp_service_accout.json
+            gcloud config set account ${GCP_BUCKET_SERVICE_ACCOUNT}
+            gcloud auth activate-service-account --key-file=gcp_service_accout.json --project=${GCP_PROJECT_ID}
+            gsutil cp test.txt ${GS_URL}/test.txt
+            gsutil -m acl set -a public-read ${GS_URL}/test.txt
 
 workflows:
   tests:
@@ -190,6 +211,14 @@ workflows:
           requires:
             - build-arm
             - build-amd
+      - gcp_update_stable:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+          requires:
+            - publish-github-release    
   publish:
     jobs:
       - push-docker-build:
