--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,8 +175,9 @@ jobs:
       - attach_workspace:
           at: test.txt
       - run:
-          name: "Updating GCP txt file"
+          name: "Updating GCP release version text file"
           command: |
+            echo "${GCP_BUCKET_SERVICE_ACCOUNT_KEY}" > gcp_service_accout.json
             gcloud config set account ${GCP_BUCKET_SERVICE_ACCOUNT}
             gcloud auth activate-service-account --key-file=gcp_service_accout.json --project=${GCP_PROJECT_ID}
             gsutil cp test.txt ${GS_URL}/test.txt
