Changes done for v1-mainnet.
Signed-off-by: Ashish Kumar Mishra <ashish10677@gmail.com>

--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "homepage": "https://github.com/razor-network/razor-go#readme",
   "dependencies": {
-    "@razor-network/contracts": "1.0.1-patch3"
+    "@razor-network/contracts": "1.0.2"
   }
 }
