--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -3,8 +3,8 @@ WORKDIR /app
 COPY package.json package.json 
 RUN npm install 
 
-FROM golang:1.17-alpine as ethereum
-RUN apt update && apt install jq -y
+FROM golang:1.17 as ethereum
+RUN apt update && apt install jq python3 -y && ln -sf python3 /usr/bin/python
 WORKDIR /app
 RUN go get -d github.com/ethereum/go-ethereum@v1.10.8 \
 && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.10.8 \
