--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,12 @@ jobs:
             && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.10.8 \
             && go install github.com/mattn/goveralls@v0.0.11 \
             && go install github.com/ory/go-acc@v0.2.7 \
-            && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.44.2
+            && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.46.2
 
+      - run:
+          name: "Make Setup"
+          command: |
+           make setup
       - run:
           name: "go-fmt"
           command: |
@@ -41,7 +45,7 @@ jobs:
       - run:
           name: "Executing benchmarks"
           command: |
-            docker run --rm -v $(pwd):/test --name go  razor-test go test ./... -bench=. -run=^#
+             go test ./... -bench=. -run=^#
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
