--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,45 +84,48 @@
 #           draft: false
 #           prerelease: false
 
+---
 name: CI/CD Pipeline
-
 on:
   push:
     tags:
-      - 'v*'
+      - v*
   pull_request:
     branches:
-      - '*'
-
+      - "*"
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
-
+          node-version: "18"
       - name: Setup Go
-       uses: actions/setup-go@v2
+        uses: actions/setup-go@v2
         with:
-          go-version: '1.17.6'
-      
+          go-version: 1.17.6
       - name: Install Dependencies
-        run: |
+        run: >
           sudo add-apt-repository -y ppa:ethereum/ethereum
-          sudo apt-get update
-          sudo apt-get install -y npm ethereum
-          npm install
-          go get -d github.com/ethereum/go-ethereum@v1.10.8 \
-          && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.10.8 \
-          && go install github.com/mattn/goveralls@v0.0.11 \
-          && go install github.com/ory/go-acc@v0.2.7 \
-          && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.46.2
 
+          sudo apt-get update
+
+          sudo apt-get install -y npm ethereum
+
+          npm install
+
+          go get -d github.com/ethereum/go-ethereum@v1.10.8 \
+
+          && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.10.8 \
+
+          && go install github.com/mattn/goveralls@v0.0.11 \
+
+          && go install github.com/ory/go-acc@v0.2.7 \
+
+          && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.46.2
       - name: Run make setup
         run: make setup
       - name: Run gofmt
@@ -132,34 +135,31 @@ jobs:
         run: |
           golangci-lint run -v --timeout 5m
       - name: Execute test case
-        run: |
-          go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks --output coverage.txt
-      
+        run: >
+          go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks
+          --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks
+          --output coverage.txt
       - name: Run benchmarks
         run: |
           go test ./... -bench=. -run=^#
-
       - name: Publish Coverage to Coveralls.io
-        run: |
-          goveralls -coverprofile=coverage.txt -service github -repotoken ${{ secrets.COVERALLS_TOKEN }}
-
+        run: >
+          goveralls -coverprofile=coverage.txt -service github -repotoken ${{
+          secrets.COVERALLS_TOKEN }}
   build-amd:
     runs-on: ubuntu-latest
     needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
-
+          node-version: "18"
       - name: Setup Go
-       uses: actions/setup-go@v2
+        uses: actions/setup-go@v2
         with:
-          go-version: '1.17.6'
-
+          go-version: 1.17.6
       - name: Create AMD Artifact
         run: |
           # ... [commands to create AMD artifact]
@@ -169,24 +169,20 @@ jobs:
         with:
           name: razor_go.linux-amd64.tar.gz
           path: razor_go.linux-amd64.tar.gz
-      
   build-arm:
     runs-on: ubuntu-latest
     needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
-
+          node-version: "18"
       - name: Setup Go
-       uses: actions/setup-go@v2
+        uses: actions/setup-go@v2
         with:
-          go-version: '1.17.6'
-
+          go-version: 1.17.6
       - name: Create ARM Artifact
         run: |
           # ... [commands to create ARM artifact]
@@ -196,10 +192,11 @@ jobs:
         with:
           name: razor_go.linux-arm64.tar.gz
           path: razor_go.linux-arm64.tar.gz
-      
   publish-github-release:
     runs-on: ubuntu-latest
-    needs: [build-amd, build-arm]
+    needs:
+      - build-amd
+      - build-arm
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Download Artifacts
@@ -207,32 +204,32 @@ jobs:
         with:
           path: .
       - name: Publish Release on GitHub
-        run: |
+        run: >
           REPO_OWNER=${{ github.repository }} | cut -d'/' -f1
-          REPO_NAME=${{ github.repository }} | cut -d'/' -f2
-          VERSION=$(git describe --tags --abbrev=0)
-          mv razor_go.linux-amd64.tar.gz razor_go.${VERSION}.linux-amd64.tar.gz
-          mv razor_go.linux-arm64.tar.gz razor_go.${VERSION}.linux-arm64.tar.gz
-          ghr -t ${GITHUB_TOKEN} -u $REPO_OWNER -r $REPO_NAME -c ${GITHUB_SHA} ${VERSION} razor_go.${VERSION}.linux-amd64.tar.gz
 
+          REPO_NAME=${{ github.repository }} | cut -d'/' -f2
+
+          VERSION=$(git describe --tags --abbrev=0)
+
+          mv razor_go.linux-amd64.tar.gz razor_go.${VERSION}.linux-amd64.tar.gz
+
+          mv razor_go.linux-arm64.tar.gz razor_go.${VERSION}.linux-arm64.tar.gz
+
+          ghr -t ${GITHUB_TOKEN} -u $REPO_OWNER -r $REPO_NAME -c ${GITHUB_SHA} ${VERSION} razor_go.${VERSION}.linux-amd64.tar.gz
   push-docker-build:
     runs-on: ubuntu-latest
     needs: test
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
