--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,8 +144,7 @@ jobs:
           go test ./... -bench=. -run=^#
       - name: Publish Coverage to Coveralls.io
         run: >
-          goveralls -coverprofile=coverage.txt -service github -repotoken ${{
-          secrets.COVERALLS_TOKEN }}
+          goveralls -coverprofile=coverage.txt -service github -repotoken ${{secrets.COVERALLS_TOKEN }}
   build-amd:
     runs-on: ubuntu-latest
     needs: test
