--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,9 +142,10 @@ jobs:
       - name: Run benchmarks
         run: |
           go test ./... -bench=. -run=^#
-      - name: Publish Coverage to Coveralls.io
-        run: >
-          goveralls -coverprofile=coverage.txt -service github -repotoken ${{secrets.COVERALLS_TOKEN }}
+      # COVERALLS_TOKEN needs to be added to repo secrets
+      # - name: Publish Coverage to Coveralls.io
+      #   run: >
+      #     goveralls -coverprofile=coverage.txt -service github -repotoken ${{secrets.COVERALLS_TOKEN }}
   build-amd:
     runs-on: ubuntu-latest
     needs: test
