--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,6 +146,9 @@ jobs:
       # - name: Publish Coverage to Coveralls.io
       #   run: >
       #     goveralls -coverprofile=coverage.txt -service github -repotoken ${{secrets.COVERALLS_TOKEN }}
+      - uses: bissolli/gh-action-persist-workspace@v1
+        with:
+          action: persist
   build-amd:
     runs-on: ubuntu-latest
     needs: test
@@ -160,6 +163,9 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17.6
+      - uses: bissolli/gh-action-persist-workspace@v1
+        with:
+          action: retrieve
       - name: Create AMD Artifact
         run: |
           # ... [commands to create AMD artifact]
@@ -183,6 +189,9 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17.6
+      - uses: bissolli/gh-action-persist-workspace@v1
+        with:
+          action: retrieve
       - name: Create ARM Artifact
         run: |
           # ... [commands to create ARM artifact]
