--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,8 @@ jobs:
           cd build/bin
           tar -czvf razor_go.linux-amd64.tar.gz razor
           ls -la
+          mv razor_go.linux-amd64.tar.gz ../../
+          ls -la
       - name: Upload AMD Artifact
         uses: actions/upload-artifact@v2
         with:
