--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,10 +155,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "18"
+
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
@@ -166,6 +168,27 @@ jobs:
       - uses: bissolli/gh-action-persist-workspace@v1
         with:
           action: retrieve
+
+      - name: Install Dependencies
+        run: >
+          sudo add-apt-repository -y ppa:ethereum/ethereum
+
+          sudo apt-get update
+
+          sudo apt-get install -y npm ethereum
+
+          npm install
+
+          go get -d github.com/ethereum/go-ethereum@v1.10.8 \
+
+          && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.10.8 \
+
+          && go install github.com/mattn/goveralls@v0.0.11 \
+
+          && go install github.com/ory/go-acc@v0.2.7 \
+
+          && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.46.2
+
       - name: Create AMD Artifact
         run: |
           # ... [commands to create AMD artifact]
@@ -176,6 +199,7 @@ jobs:
           ls -la
           mv razor_go.linux-amd64.tar.gz ../../
           ls -la
+
       - name: Upload AMD Artifact
         uses: actions/upload-artifact@v2
         with:
@@ -187,21 +211,26 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "18"
+
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.17.6
+
       - uses: bissolli/gh-action-persist-workspace@v1
         with:
           action: retrieve
+
       - name: Create ARM Artifact
         run: |
           # ... [commands to create ARM artifact]
           tar -czvf razor_go.linux-arm64.tar.gz razor
+
       - name: Upload ARM Artifact
         uses: actions/upload-artifact@v2
         with:
