--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,9 +196,7 @@ jobs:
           npm run build-noargs
           cd build/bin
           tar -czvf razor_go.linux-amd64.tar.gz razor
-          ls -la
           mv razor_go.linux-amd64.tar.gz ../../
-          ls -la
 
       - name: Upload AMD Artifact
         uses: actions/upload-artifact@v2
@@ -226,40 +224,70 @@ jobs:
         with:
           action: retrieve
 
+      - name: Install Dependencies
+        run: >
+          sudo add-apt-repository -y ppa:ethereum/ethereum
+
+          sudo apt-get update
+
+          sudo apt-get install -y npm ethereum
+
+          npm install
+
+          go get -d github.com/ethereum/go-ethereum@v1.10.8 \
+
+          && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.10.8 \
+
+          && go install github.com/mattn/goveralls@v0.0.11 \
+
+          && go install github.com/ory/go-acc@v0.2.7 \
+
+          && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.46.2
+
       - name: Create ARM Artifact
         run: |
           # ... [commands to create ARM artifact]
+          npm i
+          npm run build-noargs
+          cd build/bin
           tar -czvf razor_go.linux-arm64.tar.gz razor
+          mv razor_go.linux-arm64.tar.gz ../../
 
       - name: Upload ARM Artifact
         uses: actions/upload-artifact@v2
         with:
           name: razor_go.linux-arm64.tar.gz
           path: razor_go.linux-arm64.tar.gz
+
+
   publish-github-release:
     runs-on: ubuntu-latest
     needs:
       - build-amd
       - build-arm
-    if: startsWith(github.ref, 'refs/tags/v')
+    # if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
         with:
-          path: .
-      - name: Publish Release on GitHub
-        run: >
-          REPO_OWNER=${{ github.repository }} | cut -d'/' -f1
+          name: razor_go.linux-amd64.tar.gz, razor_go.linux-amd64.tar.gz
+      - name: Display structure of downloaded files
+        run: ls -R
+      # - name: Publish Release on GitHub
+      #   run: >
+      #     REPO_OWNER=${{ github.repository }} | cut -d'/' -f1
 
-          REPO_NAME=${{ github.repository }} | cut -d'/' -f2
+      #     REPO_NAME=${{ github.repository }} | cut -d'/' -f2
 
-          VERSION=$(git describe --tags --abbrev=0)
+      #     VERSION=$(git describe --tags --abbrev=0)
 
-          mv razor_go.linux-amd64.tar.gz razor_go.${VERSION}.linux-amd64.tar.gz
+      #     mv razor_go.linux-amd64.tar.gz razor_go.${VERSION}.linux-amd64.tar.gz
 
-          mv razor_go.linux-arm64.tar.gz razor_go.${VERSION}.linux-arm64.tar.gz
+      #     mv razor_go.linux-arm64.tar.gz razor_go.${VERSION}.linux-arm64.tar.gz
 
-          ghr -t ${GITHUB_TOKEN} -u $REPO_OWNER -r $REPO_NAME -c ${GITHUB_SHA} ${VERSION} razor_go.${VERSION}.linux-amd64.tar.gz
+      #     ghr -t ${GITHUB_TOKEN} -u $REPO_OWNER -r $REPO_NAME -c ${GITHUB_SHA} ${VERSION} razor_go.${VERSION}.linux-amd64.tar.gz
+
+
   push-docker-build:
     runs-on: ubuntu-latest
     needs: test
