--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,64 +94,66 @@ on:
     branches:
       - "*"
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "18"
-      - name: Setup Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.17.6
-      - name: Install Dependencies
-        run: >
-          sudo add-apt-repository -y ppa:ethereum/ethereum
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: "18"
+  #     - name: Setup Go
+  #       uses: actions/setup-go@v2
+  #       with:
+  #         go-version: 1.17.6
+  #     - name: Install Dependencies
+  #       run: >
+  #         sudo add-apt-repository -y ppa:ethereum/ethereum
 
-          sudo apt-get update
+  #         sudo apt-get update
 
-          sudo apt-get install -y npm ethereum
+  #         sudo apt-get install -y npm ethereum
 
-          npm install
+  #         npm install
 
-          go get -d github.com/ethereum/go-ethereum@v1.10.8 \
+  #         go get -d github.com/ethereum/go-ethereum@v1.10.8 \
 
-          && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.10.8 \
+  #         && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.10.8 \
 
-          && go install github.com/mattn/goveralls@v0.0.11 \
+  #         && go install github.com/mattn/goveralls@v0.0.11 \
 
-          && go install github.com/ory/go-acc@v0.2.7 \
+  #         && go install github.com/ory/go-acc@v0.2.7 \
 
-          && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.46.2
-      - name: Run make setup
-        run: make setup
-      - name: Run gofmt
-        run: |
-          gofmt
-      - name: Run golangci-lint
-        run: |
-          golangci-lint run -v --timeout 5m
-      - name: Execute test case
-        run: >
-          go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks
-          --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks
-          --output coverage.txt
-      - name: Run benchmarks
-        run: |
-          go test ./... -bench=. -run=^#
-      # COVERALLS_TOKEN needs to be added to repo secrets
-      # - name: Publish Coverage to Coveralls.io
-      #   run: >
-      #     goveralls -coverprofile=coverage.txt -service github -repotoken ${{secrets.COVERALLS_TOKEN }}
-      - uses: bissolli/gh-action-persist-workspace@v1
-        with:
-          action: persist
+  #         && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.46.2
+  #     - name: Run make setup
+  #       run: make setup
+  #     - name: Run gofmt
+  #       run: |
+  #         gofmt
+  #     - name: Run golangci-lint
+  #       run: |
+  #         golangci-lint run -v --timeout 5m
+  #     - name: Execute test case
+  #       run: >
+  #         go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks
+  #         --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks
+  #         --output coverage.txt
+  #     - name: Run benchmarks
+  #       run: |
+  #         go test ./... -bench=. -run=^#
+  #     # COVERALLS_TOKEN needs to be added to repo secrets
+  #     # - name: Publish Coverage to Coveralls.io
+  #     #   run: >
+  #     #     goveralls -coverprofile=coverage.txt -service github -repotoken ${{secrets.COVERALLS_TOKEN }}
+  #     - uses: bissolli/gh-action-persist-workspace@v1
+  #       with:
+  #         action: persist
+
+
   build-amd:
     runs-on: ubuntu-latest
-    needs: test
+    # needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -205,7 +207,7 @@ jobs:
           path: razor_go.linux-amd64.tar.gz
   build-arm:
     runs-on: ubuntu-latest
-    needs: test
+    # needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -267,10 +269,15 @@ jobs:
       - build-arm
     # if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - name: Download Artifacts
+      - name: Download Artifacts AMD
         uses: actions/download-artifact@v2
         with:
-          name: razor_go.linux-amd64.tar.gz, razor_go.linux-amd64.tar.gz
+          name: razor_go.linux-amd64.tar.gz
+
+      - name: Download Artifacts ARM
+        uses: actions/download-artifact@v2
+        with:
+          name: razor_go.linux-arm64.tar.gz
       - name: Display structure of downloaded files
         run: ls -R
       # - name: Publish Release on GitHub
