--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -297,7 +297,7 @@ jobs:
 
   push-docker-build:
     runs-on: ubuntu-latest
-    needs: test
+    # needs: test
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout code
