--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -38,10 +38,11 @@ jobs:
       
       - name: Install Dependencies
         run: |
+          sudo add-apt-repository -y ppa:ethereum/ethereum
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends ethereum
-          npm ci
-          GO111MODULE=on go get -d github.com/ethereum/go-ethereum@v1.12.2
+          sudo apt-get install -y npm ethereum
+          npm install
+          go get -d github.com/ethereum/go-ethereum@v1.12.2
           go install github.com/ethereum/go-ethereum/cmd/abigen@v1.12.2
           go install github.com/mattn/goveralls@v0.0.11
           go install github.com/ory/go-acc@v0.2.7
